tests/architecture/fixtures/invalid/infrastructure-boundaries/apps/commerce/unresolved-app-alias.ts
export { missing } from "@/features/definitely-missing";
